ipython (0.13-1) unstable; urgency=low

  * New upstream release
    No repackging necessary anymore, js sources available in external
    minified variants are not installed
  * refresh patches, drop upstream applied full-qt-imports 
  * drop libjs-jquery-ui dependency, use the embedded development branch

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Sat, 30 Jun 2012 11:03:21 +0200

ipython (0.12.1+dfsg-2) unstable; urgency=low

  * add ipython3-notebook package
  * move static notebook data to ipython-notebook-common
  * add ipython3 depend on python3-simplegeneric and remove the embedded copy
  * update use-system-mathjax-if-available.patch:
    prefer local mathjax installation over the system one
  * add parallel-2to3.patch:
    allow running 2to3 in parallel. Thanks to Jakub Wilk for the patch
  * add full-qt-imports.patch: (Closes: #671363)
    avoids choosing an incomplete qt version if a full one is available
  * use dh-linktree to link jquery-ui themes
  * debian/copyright: add missing copyright information for simplegeneric,
    mglob and decorators

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Thu, 17 May 2012 19:07:19 +0200

ipython (0.12.1+dfsg-1) unstable; urgency=low

  * New upstream release (Closes: #655413, #663256)
    Repackaged to remove minified javascript files from source.
  * add get-orig-source target to rules
  * ipython-notebook: depend on libjs-mathjax instead of recommending.
    mathjax can't be securely served from cloudfront.
  * debian/rules: delete build directory in clean (Closes: #671315)
  * remove transitional ipython-parallel package
  * set HOME to build folder for doc build and tests (Closes: #665224)
  * move all examples to ipython-doc
  * move python-argparse to suggests (Closes: #653650)
  * update standard version to 3.9.3, no changes needed
  * override lintian desktop-command-not-in-package
  * remove python-pymongo build dep, tests skipped without running mongod
